--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
-$primary-color: indigo;
+$primary-color:#e23744;
+$danger-color: #D65641;
 $border-color: rgb(232, 232, 232);
 $dark-grey: rgb(130, 130, 130);
+$border-color-hover: #2A2E42;
+$input-border-box-shadow: 0 0 0 0 transparent;
