--- a/src/shared/components/Navbar/navbar.scss
+++ b/src/shared/components/Navbar/navbar.scss
@@ -2,9 +2,10 @@
 
 .navbar__wrapper {
     margin: auto;
+    padding: 2rem;
     width: 100%;
     height: 72px;
-    max-width: 1000px;
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
