--- a/src/views/Coupon/coupon.scss
+++ b/src/views/Coupon/coupon.scss
@@ -2,6 +2,10 @@
     width: 50%;
     min-width: 500px;
 
+    .icon-arrow-left2 {
+        margin-right: .25rem;
+    }
+
     .coupon__form {
 
         .coupon__form--radio,
