--- a/src/views/Cart/cart.scss
+++ b/src/views/Cart/cart.scss
@@ -1,1 +1,106 @@
-.cart__wrapper {}
+@import "./../../styles/variables";
+
+.cart__wrapper {
+
+    .icon-plus {
+        font-size: 12px;
+        margin-right: .25rem;
+    }
+
+    .cart__coupons-list__wrapper {
+        border: none;
+        background: white;
+
+        .ant-collapse-header {
+
+            .icon-ticket.ant-collapse-arrow {
+                font-size: 18px;
+                display: inline-block;
+                color: $primary-color;
+                vertical-align: bottom;
+            }
+        }
+
+        .cart__coupons-list--coupon.ant-collapse-item {
+            width: 100%;
+            margin: .5rem 0;
+            padding: .5rem;
+            border-radius: 10px;
+            border: 1px solid $border-color;
+            background: white;
+
+            .cart__coupons-list--coupon-code {
+                margin: 0;
+                font-weight: bold;
+                font-size: 16px;
+
+                .icon-ticket {
+                    margin-right: .25rem;
+                }
+            }
+        }
+
+        .ant-collapse-content {
+            border-color: $border-color;
+
+            .cart__coupons-list--coupon__content {
+                .cart__coupons-list--coupon__content-min-order {
+                    margin-top: .5rem;
+                    font-size: 14px;
+                    display: block;
+                }
+
+                .cart__coupons-list--coupon__content--actions {
+                    padding-top: 1rem;
+
+                    .ant-btn {
+                        padding: .5rem 2rem;
+                        margin-left: auto;
+                        display: block;
+                        width: fit-content;
+                        height: fit-content;
+                    }
+                }
+            }
+        }
+    }
+
+    .cart__value-generator__wrapper {
+        padding: 1rem;
+        border-radius: 10px;
+        border: 1px solid $border-color;
+        box-shadow: 0px 0px 10px rgb(230, 230, 230);
+
+        .cart__value-generator--value {
+            margin: 1rem 0 3rem;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .cart__value-generator--hint {
+            font-size: 12px;
+            color: $dark-grey;
+        }
+
+        .cart__value-generator--chips {
+            padding: .5rem 0;
+        }
+    }
+}
+
+.coupon-result__content {
+    text-align: center;
+    padding: 300px 1rem 1rem;
+
+    &.danger {
+        background: url("./../../assets/images/sad.svg") no-repeat;
+        background-position: center 25px;
+        background-size: 250px 250px;
+    }
+
+    &.success {
+        background: url("./../../assets/images/happy.svg") no-repeat;
+        background-position: center 50px;
+        background-size: 200px 200px;
+    }
+}
